force-app/main/default/objects/talkdesk__Talkdesk_Relate_To_Action__c/talkdesk__Talkdesk_Relate_To_Action__c.object-meta.xml
<CustomObject>
    <label>Talkdesk Relate To Action</label>
    <nameField>
        <displayFormat>RT-{0000000000}</displayFormat>
        <label>Talkdesk Relate To Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talkdesk Relate To Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>