force-app/main/default/objects/talkdesk__Talkdesk_Relate_To_Action__c/fields/talkdesk__Agent__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Relate_To_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>