force-app/main/default/objects/talkdesk__Talkdesk_Relate_To_Action__c/fields/talkdesk__Contact_Ids_Found__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Contact_Ids_Found__c</fullName>
    <label>Contact Ids Found</label>
    <length>255</length>
    <type>Text</type>
</CustomField>