force-app/main/default/objects/talkdesk__Talkdesk_Relate_To_Action__c/fields/talkdesk__Error__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Error__c</fullName>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>