force-app/main/default/objects/talkdesk__Talkdesk_Relate_To_Action__c/fields/talkdesk__Num_Records_Found__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Num_Records_Found__c</fullName>
    <label>Num Records Found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>