force-app/main/default/objects/talkdesk__Talkdesk_Relate_To_Action__c/fields/talkdesk__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>