force-app/main/default/objects/talkdesk__Talkdesk_Relate_To_Action__c/fields/talkdesk__Related_Record__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Related_Record__c</fullName>
    <label>Related Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>