force-app/main/default/objects/talkdesk__Talkdesk_Relate_To_Action__c/fields/talkdesk__Talkdesk_Activity__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Talkdesk_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talkdesk Activity</label>
    <referenceTo>talkdesk__Talkdesk_Activity__c</referenceTo>
    <relationshipLabel>Relate To Actions</relationshipLabel>
    <relationshipName>Relate_To_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>