force-app/main/default/objects/talkdesk__Talkdesk_Relate_To_Action__c/fields/talkdesk__UI_Action__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__UI_Action__c</fullName>
    <label>UI Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nothing</fullName>
                <default>true</default>
                <label>Nothing</label>
            </value>
            <value>
                <fullName>Show Widget</fullName>
            </value>
            <value>
                <fullName>Pop Related Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>